--- a/upload.html
+++ b/upload.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>上传资料</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/toast.css">
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/API.js"></script>
-
+    <script src="js/toastDom.js"></script>
     <style>
         .line{
             width: 8rem;
@@ -92,7 +93,7 @@
                     </div>
                 </div>
                 <div class="col-sm-8">
-                    <button type="button" style="float: right" class="btn btn-success">提交</button>                    
+                    <button type="button" style="float: right" onclick="submitInfo()" class="btn btn-success">提交</button>
                 </div>
             </form>
         </div>
@@ -100,27 +101,29 @@
 </body>
 <script src="js/ajaxHandler.js"></script>
 <script>
-    var user = new AjaxHandler();
-    function login(){
-        
-    user.login('root',111,function(data,state){
-        console.log(data,state);
-        $.cookie('username', username, { expires: 7, path: '/' });
-    },function(data,state){
-        console.log(state);
-    });}
-    login();
-    var dname = $('#dname').val();
-    var module = $('#module .active').text().trim();
-    // var docformat=1;
-    // var fileformat = ;
-    var origion = $('#origion .active').text().trim();
-    var teacher =$('#teacher').val();
-    var filedesc =$('#filedesc').val();
-    var upuid = $.cookie('username')
-    user.uploadFile('inputFile',{dname,module,docformat,fileformat,origion,upuid,teacher,filedesc},function(data,state){
-        console.log(data);
-    })
+    function submitInfo() {
+        var user = new AjaxHandler();
+        var username=$.cookie('username');
+        var dname = $('#dname').val();
+
+        var origion = $('#origion .active').text().trim();
+        var teacher =$('#teacher').val();
+        var filedesc =$('#filedesc').val();
+        var course='default';
+        console.log({dname,teacher,username,origion,filedesc,course})
+        user.uploadFile('inputFile',{dname,teacher,username,origion,filedesc,course},function(data,state){
+            console.log(data);
+            if(data.status==200){
+                new Toast().showMsg('上传成功',1000);
+            }else if(data.status==300){
+                new Toast().showMsg('添加文件过大(>100MB)')
+            }
+        },function (data,state) {
+            new Toast().showMsg('网络连接超时',1000)
+        })
+
+    }
+
 
 
 </script>
