--- a/resourse.html
+++ b/resourse.html
@@ -43,9 +43,9 @@
                 </ul>
                 <button type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
                 <form class="navbar-form navbar-right">
-                    <div class="dropdown">
+                    <div class="dropdown" >
                         <input type="text" class="form-control dropdown-toggle" placeholder="Search" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu5" data-drop="dropdownMenu5">
+                        <ul class="dropdown-menu" id="dropdown5" aria-labelledby="dropdownMenu5" data-drop="dropdownMenu5">
                             <li class="topOption"><a href="javascript:topInput(0)" >大一</a></li>
                             <li class="topOption"><a href="javascript:topInput(1)" >大二</a></li>
                             <li class="topOption"><a href="javascript:topInput(2)" >大三</a></li>
@@ -258,6 +258,7 @@
 
 </body>
 <script>
+     var searchPage = 1;
     function selectAct(a) {
         var s1 = a.innerText;
         var k = a.parentNode.parentNode.dataset.drop;
@@ -315,9 +316,12 @@
                 var innerList ='';
                 var keyData = data.data;
                 data.data.map((item,index)=>{
-                    innerList+=`<li><a href="javascript:void(0)" class="topOption" onclick='searchAll(1,${item.cid})'>${item.cname}</a></li>`
+                    console.log(item);
+                    innerList +=`<li><a href="javascript:void(0)" class="topOption" onclick='searchAll(1,${item.cid})'>${item.cname}</a></li>`
                 })
-                document.getElementById('dropdownMenu5').innerHTML = innerList;
+                console.log(document.getElementById('dropdown5'));
+                document.getElementById('dropdown5').innerHTML = innerList;
+                console.log(innerList)
             }else if(data.status == 300){
                 new Toast().showMsg("没有该课程",1000);
             }
@@ -328,6 +332,7 @@
 
 
     function searchAll(method,cid){
+       
         if(cid==undefined){
             for(var i =0;i<keyData.length;i++){
                 if(keyData[i].cname==document.getElementById('dropdownMenu5').value){
@@ -341,8 +346,9 @@
                 
             }
         }else{
-            user.searchDoc(method,cid,function(data,state){
+            user.searchDoc(method,cid,1,1001,searchPage,function(data,state){
                 docList = data.data;
+                console.log(data)
                 showList();
             },function(data,state){
 
