--- a/personalCenter.html
+++ b/personalCenter.html
@@ -60,9 +60,8 @@
             <button type="button" style="float: right" id="saveInfo" class="btn btn-success">保存修改信息</button>
         </form>
     </div>
-    <div id="collect" style="display: none">
+    <div id="upload" style="display: none">
         <div class="panel panel-default mt leftblue">
-
             <div class="panel-body">
                 <div class="row firstLine">
                     <div class="col-xs-4 bluefont">机组课件、作业、project</div>
@@ -71,7 +70,7 @@
                 </div>
                 <div class="row firstLine">
                     <div class="col-xs-9 date small">机组课件与project.zip</div>
-                    <button type="button" class="btn btn-success col-xs-1">下载 </button>
+                    <button type="button" class="btn btn-danger col-xs-1">删除 </button>
                 </div>
                 <div class="row blackline">
                     <div class="col-xs-12">教师：吴彦祖</div>
@@ -86,7 +85,6 @@
                 <div class="row blackline">
                     <div class="col-xs-12">
                         0 0
-
                     </div>
                 </div>
             </div>
