--- a/personalCenter.html
+++ b/personalCenter.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="row firstLine">
                     <div class="col-xs-9 date small">机组课件与project.zip</div>
-                    <button type="button" class="btn btn-danger col-xs-1">删除 </button>
+                    <button type="button" onclick="deleteDoc(this)" class="btn btn-danger col-xs-1">删除 </button>
                 </div>
                 <div class="row blackline">
                     <div class="col-xs-12">教师：吴彦祖</div>
