--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                      <li class="act"><a href="javascript:void(0)">动态</a></li>
                      <li class="orig"><a href="javascript:navToSR()">智库原创</a></li>
                      <li class="grou"><a href="javascript:void(0)">团队建设</a></li>
-                     <li><a href="#" data-toggle="modal" data-target="#myModal">意见反馈</a></li>
+                     <!-- <li><a href="#" data-toggle="modal" data-target="#myModal">意见反馈</a></li> -->
                      <li id="loginOption">
                          <a href="#"  data-toggle="modal" data-target="#login">登录/注册</a>
                          
