--- a/resourse.html
+++ b/resourse.html
@@ -41,16 +41,16 @@
                     <!-- <li id="outer"><a href="javascript:switchSourse(2)">校外资源</a></li> -->
 
                 </ul>
-                <button type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button>
+                <!-- <button type="button" class="btn btn-default navbar-btn navbar-right">Sign in</button> -->
                 <button  class="btn btn-default navbar-btn navbar-right" id='searchBtn'>搜索</button>
                 <form class="navbar-form navbar-right">
                     <div class="dropdown" >
                         <input type="text" class="form-control dropdown-toggle" placeholder="Search" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" autocomplete="off">
                         <ul class="dropdown-menu" id="dropdown5" aria-labelledby="dropdownMenu5" data-drop="dropdownMenu5">
-                            <li class="topOption"><a href="javascript:topInput(0)" >大一</a></li>
+                            <!-- <li class="topOption"><a href="javascript:topInput(0)" >大一</a></li>
                             <li class="topOption"><a href="javascript:topInput(1)" >大二</a></li>
                             <li class="topOption"><a href="javascript:topInput(2)" >大三</a></li>
-                            <li class="topOption"><a href="javascript:topInput(3)" >大四</a></li>
+                            <li class="topOption"><a href="javascript:topInput(3)" >大四</a></li> -->
                         </ul>
                     </div>
                 </form>
