--- a/personalCenter.html
+++ b/personalCenter.html
@@ -61,7 +61,7 @@
         </form>
     </div>
     <div id="upload" style="display: none">
-        <div class="panel panel-default mt leftblue">
+        <!-- <div class="panel panel-default mt leftblue">
             <div class="panel-body">
                 <div class="row firstLine">
                     <div class="col-xs-4 bluefont">机组课件、作业、project</div>
@@ -88,12 +88,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div id="download" style="display: none;">
 
-        <div class="panel panel-default mt leftblue">
+        <!-- <div class="panel panel-default mt leftblue">
 
             <div class="panel-body">
                 <div class="row firstLine">
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 </body>
