--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
                  </div>
                  <div class="row row-line">
                      <div class="col-xs-12 col-sm-6" >
-                         <h3>Python101 线下女性编程活动</h3>
-                         <small class="that-blue">2017年8月6日</small>
+                         <h3>智库操作系统数据库发布</h3>
+                         <small class="that-blue">2017年10月6日</small>
                      </div>
                      <div class="col-xs-12 col-sm-6">
-                         <img src="imgs/133.jpg" alt="" style="width: 80%;height: auto;">
+                         <img src="imgs/148.jpg" alt="" style="width: 80%;height: auto;">
                      </div>
                  </div>
 
@@ -174,7 +174,7 @@
                      <div class="col-sm-1"></div>
                      <div class="col-sm-1"></div>
                      <div class="col-xs-12 col-sm-3">
-                         <img src="imgs/133.jpg" alt="" style="width: 100%;height: 100%;">
+                         <img src="imgs/group.jpg" alt="" style="width: 100%;height: 100%;">
                      </div>
                      <div class="col-xs-12 col-sm-6" onclick="navTomember()" style="cursor: pointer">
                          <h3>成员介绍</h3>
