--- a/member.html
+++ b/member.html
@@ -22,31 +22,43 @@
 
                 </div>
                 <div class="col-sm-4 col-xs-6">
-                    <img  src="imgs/jp.jpg" alt="">
-                    <h3>孙吉鹏</h3>
+                    <img  src="imgs/22.jpg" alt="">
+                    <h3>林子童</h3>
                     <h5 class="that-blue">small tag</h5>
 
                 </div>
                 <div class="col-sm-4 col-xs-6">
-                    <img src="imgs/jp.jpg" alt="">
-                    <h3>孙吉鹏</h3>                    <h5 class="that-blue">small tag</h5>
+                    <img src="imgs/33.jpg" alt="">
+                    <h3>袁郭苑</h3>                    <h5 class="that-blue">small tag</h5>
 
                 </div>
                 <div class="col-sm-4 col-xs-6" >
-                    <img  src="imgs/jp.jpg" alt="">
-                    <h3>孙吉鹏</h3>
+                    <img  src="imgs/44.jpg" alt="">
+                    <h3>杜泽林</h3>
                     <h5 class="that-blue">small tag</h5>
 
                 </div>
                 <div class="col-sm-4 col-xs-6">
-                    <img src="imgs/jp.jpg" alt="">
-                    <h3>孙吉鹏</h3>
+                    <img src="imgs/55.jpg" alt="">
+                    <h3>鲍伟</h3>
                     <h5 class="that-blue">small tag</h5>
 
                 </div>
                 <div class="col-sm-4 col-xs-6">
-                    <img  src="imgs/jp.jpg" alt="">
-                    <h3>孙吉鹏</h3>
+                    <img  src="imgs/66.jpg" alt="">
+                    <h3>张晓敏</h3>
+                    <h5 class="that-blue">small tag</h5>
+
+                </div>
+                <div class="col-sm-4 col-xs-6">
+                    <img  src="imgs/77.jpg" alt="">
+                    <h3>徐卫霞</h3>
+                    <h5 class="that-blue">small tag</h5>
+
+                </div>
+                <div class="col-sm-4 col-xs-6">
+                    <img  src="imgs/99.jpg" alt="">
+                    <h3>谷一滕</h3>
                     <h5 class="that-blue">small tag</h5>
 
                 </div>
