--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
              </div>
              <a class="brand" href="#">
-                 <img alt="Brand" src="imgs/logo.png" style="width: 3rem;height: 3rem;">
+                 <img alt="Brand" src="imgs/Logo.png" style="width: 3rem;height: 3rem;">
              </a>
              <!-- Collect the nav links, forms, and other content for toggling -->
              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
