--- a/personalCenter.html
+++ b/personalCenter.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img alt="Brand" src="imgs/logo.png" style="width: 3rem;height: 3rem;margin-top: -0.75rem;">
+                    <img alt="Brand" src="imgs/Logo.png" style="width: 3rem;height: 3rem;margin-top: -0.75rem;">
                 </a>
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">个人中心</a>
