--- a/resourse.html
+++ b/resourse.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img alt="Brand" src="imgs/logo.png" style="width: 3rem;height: 3rem;margin-top: -0.75rem;">
+                    <img alt="Brand" src="imgs/Logo.png" style="width: 3rem;height: 3rem;margin-top: -0.75rem;">
                 </a>
                 <!--<img src="imgs/zhiku.png" alt="" style="height: 2rem;">-->
             </div>
