--- a/searchResourse.html
+++ b/searchResourse.html
@@ -41,43 +41,43 @@
             <div class="col-sm-4 col-xs-6" >
                 <div class="or-item">
                     <h3>数据结构</h3>
-                    <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
+                    <div class="btn btn-primary entry-btn" onclick='downloadfile(33)'>下载</div>
                 </div>
             </div>
             <div class="col-sm-4 col-xs-6">
                 <div class="or-item">
                     <h3>离散数学</h3>
-                    <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
+                    <div class="btn btn-primary entry-btn" onclick='downloadfile(31)'>下载</div>
                 </div>
             </div>
             <div class="col-sm-4 col-xs-6">
                 <div class="or-item">
                     <h3>PTA</h3>
-                    <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
+                    <div class="btn btn-primary entry-btn" onclick='downloadfile(35)'>下载</div>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-6">
+            <!-- <div class="col-sm-4 col-xs-6">
                 <div class="or-item">
                     <h3>计算机组成原理</h3>
                     <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
                 </div>
-            </div>
+            </div> -->
             <div class="col-sm-4 col-xs-6">
                 <div class="or-item">
                     <h3>面向对象开发技术</h3>
-                    <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
+                    <div class="btn btn-primary entry-btn" onclick='downloadfile(32)'>下载</div>
                 </div>
             </div>
             <div class="col-sm-4 col-xs-6">
                 <div class="or-item">
                     <h3>操作系统</h3>
-                    <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
+                    <div class="btn btn-primary entry-btn" onclick='downloadfile(34)'>下载</div>
                 </div>
             </div>
             <div class="col-sm-4 col-xs-6">
                 <div class="or-item">
                     <h3>数据库系统</h3>
-                    <div class="btn btn-primary entry-btn" onclick='downloadfile()'>下载</div>
+                    <div class="btn btn-primary entry-btn" onclick='downloadfile(36)'>下载</div>
                 </div>
             </div>
             
@@ -90,7 +90,7 @@
 </body>
 <script>
     function navToResource(ind) {
-        window.location.href='/resourse.html?ind='+ind;
+        window.location.href='/JPidea/resourse.html?ind='+ind;
     }
 </script>
 </html>
