--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <title>吉鹏智库</title>
+     <title>山软智库</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">       
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/toast.css">    
@@ -207,14 +207,14 @@
                      <div class="col-sm-4 col-xs-6">
                          <img class="icon-img" src="imgs/wechat-icon.png" alt="">
                          <div>微信公众平台</div>
-                         <div>吉鹏智库</div>
+                         <div>山软智库</div>
                      </div>
                      <div class="col-sm-4 col-xs-12">
                          <img class="icon-img" src="imgs/qq-icon.png" alt="">
                          <div>QQ</div>
                      </div>
                  </div>
-                 <h6 style="margin-top: 5vh">© 吉鹏智库2017</h6>
+                 <h6 style="margin-top: 5vh">© 山软智库2017</h6>
              </div>
          </div>
 
