--- a/personalCenter.html
+++ b/personalCenter.html
@@ -38,6 +38,12 @@
     <div id="info">
         <form class="form-horizontal">
             <div class="form-group">
+                <label  class="col-sm-2 control-label">昵称</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control"  placeholder="nickname">
+                </div>
+            </div>
+            <div class="form-group">
                 <label  class="col-sm-2 control-label">Email</label>
                 <div class="col-sm-10">
                     <input type="email" class="form-control"  placeholder="Email">
@@ -51,9 +57,15 @@
                 </div>
             </div>
             <div class="form-group">
+                    <label  class="col-sm-2 control-label">qq</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" placeholder="qq">
+                    </div>
+                </div>
+            <div class="form-group">
                 <label  class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input type="password" class="form-control" placeholder="修改信息请务必输入密码">
                 </div>
             </div>
 
