--- a/personalCenter.html
+++ b/personalCenter.html
@@ -43,12 +43,12 @@
                     <input type="email" class="form-control"  placeholder="nickname">
                 </div>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label  class="col-sm-2 control-label">Email</label>
                 <div class="col-sm-10">
                     <input type="email" class="form-control"  placeholder="Email">
                 </div>
-            </div>
+            </div> -->
 
             <div class="form-group">
                 <label  class="col-sm-2 control-label">phoneNumber</label>
@@ -62,11 +62,39 @@
                         <input type="text" class="form-control" placeholder="qq">
                     </div>
                 </div>
+                <div class="form-group">
+                    <label  class="col-sm-2 control-label">新密码</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" placeholder="可不必修改">
+                    </div>
+                </div>
             <div class="form-group">
                 <label  class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" placeholder="修改信息请务必输入密码">
+                    <input type="password" class="form-control" placeholder="修改信息请务必输入当前密码">
                 </div>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    学院
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" id="college" aria-labelledby="dropdownMenu1" data-drop="dropdownMenu1">
+                    <!-- <li><a href="javascript:void(0)" onclick="selectAct(this)">软件学院</a></li>
+                    <li><a href="javascript:void(0)" onclick="selectAct(this)">软件学院</a></li>
+                    <li><a href="javascript:void(0)"  onclick="selectAct(this)">软件学院</a></li>
+                    <li><a href="javascript:void(0)"  onclick="selectAct(this)">软件学院</a></li> -->
+                </ul>
+            </div>
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    专业
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" id="majorList" data-drop="dropdownMenu2">
+                    <!-- <li><a href="javascript:void(0)" onclick="selectAct(this)">软件工程</a></li>
+                    <li><a href="javascript:void(0)" onclick="selectAct(this)">软件工程</a></li> -->
+                </ul>
             </div>
 
             <button type="button" style="float: right" id="saveInfo" class="btn btn-success">保存修改信息</button>
@@ -169,6 +197,7 @@
 </div>
 
 </body>
-
+<script src="js/resourse.js"></script>
 <script src="js/personalCenter.js"></script>
+
 </html>
